YI5K1MiS: input field added, minor updates
Input field component is ready to use, but adornment is currently hardcoded with a folder icon.
Restructurization of components and stories for better organization is done.
Separation of styles into module CSS files for older components is also completed.

--- a/src/themes/paws-dark.css
+++ b/src/themes/paws-dark.css
@@ -10,4 +10,6 @@
   --paws-color-bg-darkest: #222222;
   --paws-color-bg-dark: #262626;
   --paws-color-bg-lighter: #383838;
+  --paws-color-bg-disabled: #4a4a4a;
+  --paws-color-text-disabled: #8a8a8a;
 }
