multiple component updates and refactoring
restructured components: now stories are stored in a dedicated `_stories` directory;

updated temporary themes;

updated PawsInput: now "input with icon" is not disabled "input with button" + small visual bug that became a feature;

added "small" variaion to PawsButton;

fixed colors for PawsResizeButton;

--- a/src/components/PawsButton/PawsButton.module.css
+++ b/src/components/PawsButton/PawsButton.module.css
@@ -17,4 +17,11 @@
   &.secondary {
     background-color: var(--paws-color-accent-secondary);
   }
+  &.small {
+    height: 20px;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 0 10px;
+    border-radius: 4px;
+  }
 }
