--- a/src/themes/paws-light.css
+++ b/src/themes/paws-light.css
@@ -12,5 +12,6 @@
   --paws-color-bg-lighter: #f0f0f0;
   --paws-color-bg-disabled: #e0e0e0;
   --paws-color-text-disabled: #9e9e9e;
+  --paws-color-button-disabled: #ececec;
   --paws-font-family: "Wix Madefor Display", sans-serif;
 }
