--- a/src/themes/paws-dark.css
+++ b/src/themes/paws-dark.css
@@ -12,5 +12,6 @@
   --paws-color-bg-lighter: #383838;
   --paws-color-bg-disabled: #4a4a4a;
   --paws-color-text-disabled: #8a8a8a;
+  --paws-color-button-disabled: #3e3e3e;
   --paws-font-family: "Wix Madefor Display", sans-serif;
 }
