heading margin fixed, titled input variant added to PawsInput

--- a/src/components/PawsInput/PawsInput.module.css
+++ b/src/components/PawsInput/PawsInput.module.css
@@ -1,3 +1,13 @@
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.title {
+  padding-left: 10px;
+}
+
 .inputWrapper {
 	display: flex;
 	align-items: center;
