--- a/src/components/PawsCheckbox/PawsCheckbox.module.css
+++ b/src/components/PawsCheckbox/PawsCheckbox.module.css
@@ -1,51 +1,30 @@
-.checkbox {
-	display: block;
-	position: relative;
-	padding-left: 35px;
-	margin-bottom: 12px;
+.pawsCheckbox {
+	display: flex;
+	align-items: center;
 	cursor: pointer;
-	font-size: 22px;
 	user-select: none;
-
-	input[type="checkbox"] {
-		position: absolute;
-		opacity: 0;
-		cursor: pointer;
-		height: 0;
-		width: 0;
-	}
-
-	&:hover input ~ .checkmark {
-		background-color: #ccc;
-	}
-
-	input:checked ~ .checkmark {
-		background-color: var(--paws-color-text-secondary);
-	}
-
-	input:checked ~ .checkmark:after {
-		display: block;
-	}
+	gap: 10px;
 }
 
-.checkmark {
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 25px;
-	width: 25px;
-	background-color: #eee;
+.input {
+	display: none;
+}
 
-	&:after {
-		content: "";
-		position: absolute;
-		display: none;
-		left: 9px;
-		top: 5px;
-		width: 5px;
-		height: 10px;
-		border: solid white;
-		border-width: 0 3px 3px 0;
-		transform: rotate(45deg);
-	}
+.checkbox {
+	display: block;
+	width: 24px;
+	height: 24px;
+	border-radius: 6px;
+	background-color: #e2e2e2;
+	transition: background-color 0.2s;
+}
+
+.input:checked + .checkbox {
+	background-color: var(--paws-color-accent-primary);
+}
+
+.label {
+	font-size: 20px;
+	font-weight: 520;
+	color: var(--paws-color-text-primary);
 }
