#EJlPKi2q: Removed unnecessary/unused packages. Fixed ESLint & Prettier issues. Configured the "Paws UI" to release as an NPM package.

--- a/src/components/PawsButton/PawsButton.module.css
+++ b/src/components/PawsButton/PawsButton.module.css
@@ -15,7 +15,7 @@
 		font-weight: bold;
 	}
 	&.secondary {
-		background-color: var(--paws-color- accent-secondary);
+		background-color: var(--paws-color-accent-secondary);
 	}
 	&.small {
 		height: 20px;
