--- a/src/css/themes/paws-dark.css
+++ b/src/css/themes/paws-dark.css
@@ -1,4 +1,4 @@
-.dark-theme {
+.paws--dark-theme {
 	--paws-color-accent-primary: #b4355d;
 	--paws-color-accent-secondary: #62223e;
 	--paws-color-text-primary: #ffffff;
