--- a/src/css/themes/paws-light.css
+++ b/src/css/themes/paws-light.css
@@ -1,4 +1,4 @@
-.light-theme {
+.paws--light-theme {
 	--paws-color-accent-primary: #b4355d;
 	--paws-color-accent-secondary: #62223e;
 	--paws-color-text-primary: #222222;
