#HYcmVWYW: Field theming fix

--- a/src/components/PawsHeading/PawsHeading.module.css
+++ b/src/components/PawsHeading/PawsHeading.module.css
@@ -1,4 +1,5 @@
 .heading {
+	font-family: var(--paws-font-family);
 	font-weight: var(--paws-heading--font-weight);
 	color: var(--paws-color-text-primary);
 	margin: 0;
