feat: implement menu button, global tooltip system, and basic documentation

--- a/src/css/themes/paws-dark.css
+++ b/src/css/themes/paws-dark.css
@@ -10,6 +10,8 @@
 	--paws-color-bg-darkest: #222222;
 	--paws-color-bg-dark: #262626;
 	--paws-color-bg-lighter: #383838;
+	--paws-color-bg-hover: #404040;
+	--paws-color-bg-active: #4a4a4a;
 	--paws-color-bg-disabled: #4a4a4a;
 	--paws-color-text-disabled: #8a8a8a;
 	--paws-color-button-disabled: #3e3e3e;
