--- a/src/css/themes/paws-light.css
+++ b/src/css/themes/paws-light.css
@@ -10,6 +10,8 @@
 	--paws-color-bg-darkest: #ffffff;
 	--paws-color-bg-dark: #f8f8f8;
 	--paws-color-bg-lighter: #f0f0f0;
+	--paws-color-bg-hover: #e8e8e8;
+	--paws-color-bg-active: #dddddd;
 	--paws-color-bg-disabled: #e0e0e0;
 	--paws-color-text-disabled: #9e9e9e;
 	--paws-color-button-disabled: #ececec;
