fix: component sizes

--- a/src/components/PawsDropdown/PawsDropdown.module.css
+++ b/src/components/PawsDropdown/PawsDropdown.module.css
@@ -6,7 +6,8 @@
 	border-radius: 8px;
 	transition: background-color 0.2s ease;
 	box-sizing: border-box;
-	height: 24px;
+	height: 32px;
+	padding: 3px;
 	cursor: pointer;
 	user-select: none;
 	overflow: visible; /* To allow shadow of the list to show correctly */
@@ -31,8 +32,8 @@
 	border: none;
 	color: var(--paws-color-text-primary);
 	font-family: var(--paws-font-family);
-	font-size: 13px;
-	font-weight: 550;
+	font-size: 14px;
+	font-weight: 450;
 	cursor: pointer;
 }
 
@@ -42,9 +43,9 @@
 	justify-content: center;
 	background-color: var(--paws-color-bg-dark);
 	border-radius: 6px;
-	height: 20px;
-	margin-left: 2px;
-	padding: 0 8px;
+	height: 26px;
+	margin-left: 0;
+	padding: 0 10px;
 	flex-shrink: 0;
 }
 
@@ -57,7 +58,7 @@
 .selectedOption {
 	flex-grow: 1;
 	text-align: left;
-	padding: 0 10px;
+	padding: 0 9px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -110,11 +111,11 @@
 	display: flex;
 	align-items: center;
 	height: 32px;
-	padding: 0 10px;
+	padding: 0 12px;
 	cursor: pointer;
 	font-family: var(--paws-font-family);
-	font-size: 13px;
-	font-weight: 550;
+	font-size: 14px;
+	font-weight: 450;
 	transition: background-color 0.15s ease;
 }
 
@@ -123,8 +124,8 @@
 }
 
 .labelText {
-	font-size: 11px;
-	font-weight: 550;
+	font-size: 12px;
+	font-weight: 450;
 	margin-left: 0;
 	white-space: nowrap;
 }
