refactor: global redesign, unified theme system and v0.2.0-alpha release

--- a/src/components/PawsCard/PawsCard.module.css
+++ b/src/components/PawsCard/PawsCard.module.css
@@ -18,9 +18,9 @@
 }
 
 .appearanceDark {
-	background-color: var(--paws-color-bg-darkest);
+	background-color: var(--paws-color-bg-secondary);
 }
 
 .appearanceLight {
-	background-color: var(--paws-color-bg-lighter);
+	background-color: var(--paws-color-bg-primary);
 }
