--- a/src/components/PawsButton/PawsButton.module.css
+++ b/src/components/PawsButton/PawsButton.module.css
@@ -1,27 +1,30 @@
 .pawsButton {
-	font-family: var(--paws-font-family);
+	font-family: var(--paws-font-primary);
 	border: none;
-	color: var(--paws-color-text-on-accent);
+	color: var(--paws-color-accent-secondary);
 	padding: 10px 18px;
 	border-radius: 8px;
-	font-weight: 500;
+	font-weight: 550;
 	cursor: pointer;
 	transition: filter 0.2s;
+
 	&:hover {
-		filter: brightness(1.15);
+		filter: brightness(1.05);
 	}
+
 	&.primary {
 		background-color: var(--paws-color-accent-primary);
-		font-weight: bold;
 	}
+
 	&.secondary {
-		background-color: var(--paws-color-accent-secondary);
+		background-color: var(--paws-color-accent-subprimary);
 	}
+
 	&.small {
-		height: 20px;
-		font-size: 12px;
-		font-weight: 600;
+		height: 24px;
+		font-size: 13px;
+		font-weight: 550;
 		padding: 0 10px;
-		border-radius: 4px;
+		border-radius: 6px;
 	}
 }
