fix: change checkbox font size and weight

--- a/src/components/PawsCheckbox/PawsCheckbox.module.css
+++ b/src/components/PawsCheckbox/PawsCheckbox.module.css
@@ -10,8 +10,8 @@
 	transition: all 0.2s ease;
 	overflow: hidden;
 	font-family: var(--paws-font-primary);
-	font-weight: 550;
-	font-size: 13px;
+	font-weight: 600;
+	font-size: 16px;
 	color: var(--paws-color-inactive-secondary);
 	padding-right: 10px;
 	z-index: 1;
@@ -65,6 +65,7 @@
 .label {
 	padding-left: 10px; /* 10px from the square */
 	white-space: nowrap;
+	transform: translateY(-1px);
 }
 
 .disabled {
