refactor: global lowercase UI text redesign and v0.2.5-alpha release

--- a/.storybook/themes/paws-light-base.css
+++ b/.storybook/themes/paws-light-base.css
@@ -40,4 +40,9 @@
 	/* Fonts */
 
 	--paws-font-primary: "Wix Madefor Display", system-ui, sans-serif;
+
+	--paws-font-weight-light: 450;
+	--paws-font-weight-normal: 550;
+	--paws-font-weight-medium: 600;
+	--paws-font-weight-bold: 700;
 }
