--- a/.storybook/themes/paws-dark-base.css
+++ b/.storybook/themes/paws-dark-base.css
@@ -30,6 +30,7 @@
 	--paws-color-error: #f56f66;
 
 	/* Rounding */
+
 	--paws-rounding-normal: 8px;
 	--paws-rounding-normal-inner: 6px;
 	--paws-rounding-medium: 12px;
@@ -37,5 +38,11 @@
 	--paws-rounding-big: 16px;
 
 	/* Fonts */
+
 	--paws-font-primary: "Wix Madefor Display", system-ui, sans-serif;
+
+	--paws-font-weight-light: 450;
+	--paws-font-weight-normal: 550;
+	--paws-font-weight-medium: 600;
+	--paws-font-weight-bold: 700;
 }
