--- a/src/components/PawsButton/PawsButton.module.css
+++ b/src/components/PawsButton/PawsButton.module.css
@@ -4,7 +4,7 @@
 	color: var(--paws-color-accent-secondary);
 	padding: 10px 18px;
 	border-radius: 8px;
-	font-weight: 550;
+	font-weight: var(--paws-font-weight-normal);
 	cursor: pointer;
 	transition: filter 0.2s;
 
@@ -23,7 +23,7 @@
 	&.small {
 		height: 24px;
 		font-size: 13px;
-		font-weight: 550;
+		font-weight: var(--paws-font-weight-normal);
 		padding: 0 10px;
 		border-radius: 6px;
 	}
