--- a/src/components/PawsInput/PawsInput.module.css
+++ b/src/components/PawsInput/PawsInput.module.css
@@ -7,7 +7,7 @@
 
 .title {
 	font-size: 11px;
-	font-weight: 550;
+	font-weight: var(--paws-font-weight-normal);
 	color: var(--paws-color-text-secondary);
 	padding-left: 4px;
 	user-select: none;
@@ -57,8 +57,8 @@ button.adornment:hover:not(:disabled) {
 
 .adornmentText {
 	font-family: var(--paws-font-primary);
-	font-size: 12px;
-	font-weight: 450;
+	font-size: 14px;
+	font-weight: var(--paws-font-weight-normal);
 	white-space: nowrap;
 }
 
@@ -74,7 +74,7 @@ button.adornment:hover:not(:disabled) {
 	background: transparent;
 	padding: 0 9px;
 	font-family: var(--paws-font-primary);
-	font-weight: 450;
+	font-weight: var(--paws-font-weight-light);
 	font-size: 14px;
 	color: var(--paws-color-text-primary);
 	min-width: 0;
