--- a/src/components/PawsButton/PawsButton.module.css
+++ b/src/components/PawsButton/PawsButton.module.css
@@ -2,7 +2,11 @@
 	font-family: var(--paws-font-primary);
 	border: none;
 	color: var(--paws-color-accent-secondary);
-	padding: 10px 18px;
+	height: 32px;
+	padding: 0 18px;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
 	border-radius: 8px;
 	font-weight: var(--paws-font-weight-normal);
 	cursor: pointer;
