--- a/src/components/PawsInstallButton/PawsInstallButton.module.css
+++ b/src/components/PawsInstallButton/PawsInstallButton.module.css
@@ -2,13 +2,13 @@
 	font-family: var(--paws-font-primary);
 	border: none;
 	color: var(--paws-color-accent-secondary);
-	height: 32px;
+	height: 24px;
 	min-width: 120px;
 	padding: 0 18px;
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	border-radius: 8px;
+	border-radius: var(--paws-rounding-normal);
 	font-weight: var(--paws-font-weight-normal);
 	cursor: pointer;
 	transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
