feat: compact card variation

--- a/src/components/PawsCard/PawsCard.module.css
+++ b/src/components/PawsCard/PawsCard.module.css
@@ -24,3 +24,11 @@
 .appearanceLight {
 	background-color: var(--paws-color-bg-primary);
 }
+
+.compact {
+	padding: 4px;
+}
+
+.compact .cardContent {
+	margin-top: 0;
+}
